Fix some a11y issues; Add more readability to texts using contrast; Add some ARIA attributes

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,15 +2,8 @@
 
 .container {
     width: 100%;
-    padding-inline: .5rem;
+    padding-inline: .75rem;
     margin-inline: auto;
-}
-
-
-
-.player__profile {
-    animation: fadeIn 200ms forwards;
-    background-color: rgb(40, 35, 26);
 }
 
 @keyframes fadeIn {
@@ -19,41 +12,6 @@
     }
 }
 
-.player__profile {
-    width: 100%;
-    height: 100%;
-    padding: 1rem;
-}
-
-.modal__body .player__profile {
-    border-radius: 5px;
-}
-
-.player__name {
-    margin: 0;
-    margin-bottom: 1rem;
-    padding: 0;
-    font-size: 1.75rem;
-    font-weight: 800;
-    color: rgb(242, 162, 12);
-}
-
-.player__backstory {
-    padding: 0;
-    text-align: justify;
-    font-size: 1.25rem;
-    color: rgb(194, 134, 24);
-    font-weight: 600;
-    letter-spacing: 1px;
-}
-
-
-
-.player>.player__avatar:hover {
-    /* transform: scale(1.05, 1.05); */
-
-    animation: scale__avatar 75ms forwards;
-}
 
 @keyframes scale__avatar {
     to {
@@ -61,31 +19,10 @@
     }
 }
 
-.player__profile {
-    flex-direction: column;
-    justify-content: center;
-}
-
-.player__profile .player__avatar {
-    display: block;
-    margin: 0 auto;
-    margin-bottom: 1rem;
-}
-
-
-
-
-
 @media (min-width: 50rem) {
     .container {
         width: 80%;
-    }
-
-    .player__profile .player__avatar {
-        float: left;
-        width: 200px;
-        margin-right: .5rem;
-        margin-bottom: .5rem;
+        padding: 0;
     }
 }
 
